--- a/TensorFlow_Captcha_OCR.ipynb
+++ b/TensorFlow_Captcha_OCR.ipynb
@@ -6,17 +6,8 @@
       "name": "TensorFlow Captcha OCR",
       "private_outputs": true,
       "provenance": [],
-      "collapsed_sections": [
-        "nD_5u5IZfCa7",
-        "Rq7qIzKgfCbB",
-        "uRvdCY0HfCbD",
-        "XoI9nDaTfCbE",
-        "OuL0nqmLfCbF",
-        "H9BeDYG1MYCX",
-        "FFfn4us9NiP7"
-      ],
-      "toc_visible": true,
-      "include_colab_link": true
+      "collapsed_sections": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "display_name": "Python 3",
@@ -38,16 +29,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/hw0603/captcha-solver/blob/main/TensorFlow_Captcha_OCR.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -509,6 +490,27 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "pzH33a7a22MC"
+      },
+      "source": [
+        "## 모델 평가"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6NQzMKuy26Y1"
+      },
+      "source": [
+        "results = model.evaluate(validation_dataset, batch_size=batch_size)\n",
+        "print(\"Test loss:\", results)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "Qo2O5PiUfCbG"
       },
       "source": [
@@ -526,7 +528,7 @@
         "    model.get_layer(name=\"image\").input, model.get_layer(name=\"dense2\").output\n",
         ")\n",
         "prediction_model.summary()\n",
-        " \n",
+        "\n",
         "# 추론 결과 후처리\n",
         "def decode_batch_predictions(pred):\n",
         "    input_len = np.ones(pred.shape[0]) * pred.shape[1]\n",
@@ -540,9 +542,9 @@
         "        res = tf.strings.reduce_join(num_to_char(res)).numpy().decode(\"utf-8\")\n",
         "        output_text.append(res)\n",
         "    return output_text\n",
-        " \n",
-        " \n",
-        "# 랜덤 샘플 추론하여 시각화 \n",
+        "\n",
+        "\n",
+        "# 랜덤 샘플 추론하여 시각화\n",
         "for batch in validation_dataset.take(1):\n",
         "    batch_images = batch[\"image\"]\n",
         "    batch_labels = batch[\"label\"]\n",
@@ -554,7 +556,7 @@
         "    for label in batch_labels:\n",
         "        label = tf.strings.reduce_join(num_to_char(label)).numpy().decode(\"utf-8\")\n",
         "        orig_texts.append(label)\n",
-        " \n",
+        "\n",
         "    _, ax = plt.subplots(4, 4, figsize=(15, 5))\n",
         "    for i in range(len(pred_texts)):\n",
         "        img = (batch_images[i, :, :, 0] * 255).numpy().astype(np.uint8)\n",
