Update CoLab Notebook

--- a/TensorFlow_Captcha_OCR.ipynb
+++ b/TensorFlow_Captcha_OCR.ipynb
@@ -5,17 +5,10 @@
         "colab": {
             "name": "TensorFlow Captcha OCR",
             "private_outputs": true,
-            "provenance": [
-                {
-                    "file_id": "https://github.com/keras-team/keras-io/blob/master/examples/vision/ipynb/captcha_ocr.ipynb",
-                    "timestamp": 1628958661043
-                }
-            ],
-            "collapsed_sections": [
-                "uRvdCY0HfCbD",
-                "XoI9nDaTfCbE",
-                "OuL0nqmLfCbF"
-            ]
+            "provenance": [],
+            "collapsed_sections": [],
+            "toc_visible": true,
+            "include_colab_link": true
         },
         "kernelspec": {
             "display_name": "Python 3",
@@ -40,15 +33,25 @@
         {
             "cell_type": "markdown",
             "metadata": {
+                "id": "view-in-github",
+                "colab_type": "text"
+            },
+            "source": [
+                "<a href=\"https://colab.research.google.com/gist/hw0603/51a623121fed39a1d93912930a7bde51/tensorflow-captcha-ocr.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+            ]
+        },
+        {
+            "cell_type": "markdown",
+            "metadata": {
                 "id": "FHM-Ac5IfCa3"
             },
             "source": [
-                "# 경북대학교 수강신청 자동입력방지문자 인식\n",
+                "# TensorFlow Captcha OCR\n",
                 "\n",
-                "**제작:** [hw0603/Altius](http://altius.iptime.org)<br>\n",
+                "**제작:** Hyunguk Ryu (@hw0603)<br>\n",
                 "**생성일:** 2021/08/26<br>\n",
                 "**최근 수정일:** 2022/08/12<br>\n",
-                "**설명:** CNN, RNN, CTC loss를 사용하여 경북대학교 수강신청 페이지 자동입력방지문자 인식을 위한 OCR 모델을 구현합니다."
+                "**설명:** CNN, RNN, CTC loss를 사용하여 자동입력방지문자 인식을 위한 OCR 모델을 구현합니다."
             ]
         },
         {
@@ -185,10 +188,10 @@
                 "id": "QLjrCm-1fCa_"
             },
             "source": [
-                "이 데이터 셋은 약 4000개의 라벨링된 `PNG` 이미지로 구성되어 있습니다.  \n",
+                "이 데이터 셋은 약 5000개의 라벨링된 `PNG(RGBA 32)` 이미지로 구성되어 있습니다.  \n",
                 "각 샘플에 대한 label은 문자로 구성되어 있으며, 파일명에서 확인할 수 있습니다.  \n",
-                "모델을 훈련시키기 위해 label의 문자를 숫자로 매핑할 것입니다. 이후, 예측을 위해 다시 숫자를 문자로 매핑합니다.  \n",
-                "이를 위해서 문자를 정수로, 정수를 문자로 매핑하는 두 개의 딕셔너리를 만들것입니다."
+                "모델을 훈련시키기 위해 label의 문자를 숫자로 매핑한 후, 예측을 위해 다시 숫자를 문자로 매핑합니다.  \n",
+                "이를 위해서 문자를 정수로, 정수를 문자로 매핑하는 두 개의 딕셔너리를 만들 것입니다."
             ]
         },
         {
@@ -219,9 +222,9 @@
                 "img_width = 140\n",
                 "img_height = 35\n",
                 " \n",
-                "# 이미지가 convolutional blocks에 의해 downsample되는 비율을 2로 설정할 것입니다.\n",
-                "# 우리는 2번의 convolutional blocks를 사용할 것이기 때문에\n",
-                "# 이미지는 한 변을 기준으로 4배 줄어듭니다.\n",
+                "# 이미지가 convolutional blocks에 의해 downsample되는 비율을 2로 설정\n",
+                "# 두 번의 convolutional blocks를 사용할 것이기 때문에\n",
+                "# 이미지는 한 변을 기준으로 4배 줄어듦.\n",
                 "downsample_factor = 4\n",
                 " \n",
                 "# 라벨 중 가장 긴 것의 길이 구함\n",
@@ -395,7 +398,7 @@
                 "        self.loss_fn = keras.backend.ctc_batch_cost\n",
                 " \n",
                 "    def call(self, y_true, y_pred):\n",
-                "        # 모델이 training하는 경우, `self.add_loss()`를 사용하여 loss를 계산하고 더해줌\n",
+                "        # 모델이 training하는 경우, self.add_loss()를 사용하여 loss를 계산하고 더해줌\n",
                 "        batch_len = tf.cast(tf.shape(y_true)[0], dtype=\"int64\")\n",
                 "        input_length = tf.cast(tf.shape(y_pred)[1], dtype=\"int64\")\n",
                 "        label_length = tf.cast(tf.shape(y_true)[1], dtype=\"int64\")\n",
@@ -546,7 +549,7 @@
                 "id": "p8XacpVwfCbH"
             },
             "source": [
-                "# 출력 레이어까지 레이어를 추출하여 예측 모델을 가져옵니다.\n",
+                "# 출력 레이어까지 레이어를 추출하여 예측 모델을 가져 옴\n",
                 "prediction_model = keras.models.Model(\n",
                 "    model.get_layer(name=\"image\").input, model.get_layer(name=\"dense2\").output\n",
                 ")\n",
@@ -567,7 +570,7 @@
                 "    return output_text\n",
                 "\n",
                 "\n",
-                "# 랜덤 샘플 추론하여 시각화\n",
+                "# 랜덤 샘플 추출 후, 해당 이미지를 추론하여 시각화\n",
                 "for batch in validation_dataset.take(1):\n",
                 "    batch_images = batch[\"image\"]\n",
                 "    batch_labels = batch[\"label\"]\n",
